# chatmate

./: .gitignore  README.md  structure.txt
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  connections.py  conversations.py  messages.py  profiles.py  ws.py
backend/app/core/: config.py  security.py  supabase_client.py
backend/app/schemas/: auth.py  connections.py  conversations.py  messages.py  profiles.py
chat-frontend/: package-lock.json  package.json  structure.txt
chat-frontend/src/lib/: supabaseClient.ts
chat-frontend/src/pages/: connections.tsx  index.tsx  login.tsx  profile.tsx  signup.tsx
chat-frontend/src/pages/chat/: [id].tsx
chat-frontend/src/pages/profile/: create.tsx
chat-frontend/src/services/: api.ts  auth.ts  connections.ts  dateHelpers.ts  messages.ts  profiles.ts
chat-frontend/src/store/: authStore.ts  connectionStore.ts  messageStore.ts  profileStore.ts
chat-frontend/src/styles/: globals.css
