[tool.poetry]
name = "chatmate"
version = "0.1.0"
description = "FastAPI + Supabase chat backend"
authors = ["you"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
supabase = "^2.6.0"  # supabase-py
httpx = "^0.27.0"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --port 8000"
